gitops/platform/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
---
apiVersion: v1
kind: Namespace
metadata:
  name: flux-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
---
apiVersion: v1
kind: Namespace
metadata:
  name: gatekeeper-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: falco
---
apiVersion: v1
kind: Namespace
metadata:
  name: vcluster-nonprod
---
apiVersion: v1
kind: Namespace
metadata:
  name: vcluster-dr
